--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
 	"rules": {
 		"indent": [ "error", 2 ],
 		"no-trailing-spaces": "error",
-		"linebreak-style": [ "error", "unix" ],
+		"linebreak-style": [ "error", "windows" ],
 		"quotes": [ "error", "single" ],
 		"semi": [ "error", "never" ],
 		"complexity": [ "error", 10 ],
